tools/test262/testdata/file002.js
/*---
negative:
  phase: parse
  type: SyntaxError
---*/
$DONOTEVALUATE();
var a\u2E2F;